<?xml version="1.0"?>
<package format="2">
  <name>gnss_serial</name>
  <version>0.0.0</version>
  <description>The package_gps package</description>

  <maintainer email="kojun@todo.todo">kojun</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>build_flags</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>serial</exec_depend>


  <export>

  </export>
</package>
